--- a/CuisineRecipe/Podfile
+++ b/CuisineRecipe/Podfile
@@ -1,4 +1,4 @@
-# Uncomment the next line to define a global platform for your project
+source 'https://github.com/CocoaPods/Specs.git'
 # platform :ios, '9.0'
 
 target 'CuisineRecipe' do
@@ -6,5 +6,5 @@ target 'CuisineRecipe' do
   use_frameworks!
 
   # Pods for CuisineRecipe
-
+  pod 'Alamofire', '~> 4.8'
 end
